--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -731,11 +731,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tf' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-ab1e3c5f12c2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     59\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mlogits\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     60\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 61\u001b[0;31m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplaceholder\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat32\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m32\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m32\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     62\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplaceholder\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mint32\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     63\u001b[0m \u001b[0mone_hot_y\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mone_hot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_classes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'tf' is not defined"
+     ]
+    }
+   ],
    "source": [
     "### Define your architecture here.\n",
     "### Feel free to use as many code cells as needed.\n",
@@ -749,49 +759,49 @@
     "    mu = 0\n",
     "    sigma = 0.001\n",
     "    \n",
-    "    # SOLUTION: Layer 1: Convolutional. Input = 32x32x3. Output = 28x28x6.\n",
-    "    conv1_W = tf.Variable(tf.truncated_normal(shape=(5, 5, 3, 6), mean = mu, stddev = sigma))\n",
-    "    conv1_b = tf.Variable(tf.zeros(6))\n",
-    "    conv1   = tf.nn.conv2d(x, conv1_W, strides=[1, 1, 1, 1], padding='VALID') + conv1_b\n",
+    "    # SOLUTION: Layer 1: Convolutional. Input = 32x32x3. Output = 28x28x4.\n",
+    "    conv1_W = tf.Variable(tf.truncated_normal(shape=(5, 5, 3, 64), mean = mu, stddev = sigma))\n",
+    "    conv1_b = tf.Variable(tf.zeros(64))\n",
+    "    conv1   = tf.nn.conv2d(x, conv1_W, strides=[1, 1, 1, 1], padding='VALID', name='conv1') + conv1_b\n",
     "\n",
     "    # SOLUTION: Activation.\n",
-    "    conv1 = tf.nn.relu(conv1)\n",
+    "    conv1 = tf.nn.relu(conv1,name='activation1')\n",
     "\n",
-    "    # SOLUTION: Pooling. Input = 28x28x6. Output = 14x14x6.\n",
+    "    # SOLUTION: Pooling. Input = 28x28x64. Output = 14x14x64.\n",
     "    conv1 = tf.nn.max_pool(conv1, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID')\n",
     "\n",
-    "    # SOLUTION: Layer 2: Convolutional. Output = 10x10x16.\n",
-    "    conv2_W = tf.Variable(tf.truncated_normal(shape=(5, 5, 6, 16), mean = mu, stddev = sigma))\n",
-    "    conv2_b = tf.Variable(tf.zeros(16))\n",
+    "    # SOLUTION: Layer 2: Convolutional. Output = 10x10x64.\n",
+    "    conv2_W = tf.Variable(tf.truncated_normal(shape=(5, 5, 64, 64), mean = mu, stddev = sigma))\n",
+    "    conv2_b = tf.Variable(tf.zeros(64))\n",
     "    conv2   = tf.nn.conv2d(conv1, conv2_W, strides=[1, 1, 1, 1], padding='VALID') + conv2_b\n",
     "    \n",
     "    # SOLUTION: Activation.\n",
-    "    conv2 = tf.nn.relu(conv2)\n",
+    "    conv2 = tf.nn.relu(conv2,name='activation2')\n",
     "\n",
-    "    # SOLUTION: Pooling. Input = 10x10x16. Output = 5x5x16.\n",
+    "    # SOLUTION: Pooling. Input = 10x10x64. Output = 5x5x64.\n",
     "    conv2 = tf.nn.max_pool(conv2, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID')\n",
     "\n",
-    "    # SOLUTION: Flatten. Input = 5x5x16. Output = 400.\n",
+    "    # SOLUTION: Flatten. Input = 5x5x64. Output = 1600.\n",
     "    fc0   = flatten(conv2)\n",
     "    \n",
-    "    # SOLUTION: Layer 3: Fully Connected. Input = 400. Output = 120.\n",
-    "    fc1_W = tf.Variable(tf.truncated_normal(shape=(400, 120), mean = mu, stddev = sigma))\n",
+    "    # SOLUTION: Layer 3: Fully Connected. Input = 1600. Output = 512.\n",
+    "    fc1_W = tf.Variable(tf.truncated_normal(shape=(1600, 120), mean = mu, stddev = sigma))\n",
     "    fc1_b = tf.Variable(tf.zeros(120))\n",
     "    fc1   = tf.matmul(fc0, fc1_W) + fc1_b\n",
     "    \n",
     "    # SOLUTION: Activation.\n",
-    "    fc1    = tf.nn.relu(fc1)\n",
+    "    fc1    = tf.nn.relu(fc1,name='activation3')\n",
     "\n",
-    "    # SOLUTION: Layer 4: Fully Connected. Input = 120. Output = 84.\n",
-    "    fc2_W  = tf.Variable(tf.truncated_normal(shape=(120, 84), mean = mu, stddev = sigma))\n",
-    "    fc2_b  = tf.Variable(tf.zeros(84))\n",
+    "    # SOLUTION: Layer 4: Fully Connected. Input = 512. Output = 216.\n",
+    "    fc2_W  = tf.Variable(tf.truncated_normal(shape=(512, 216), mean = mu, stddev = sigma))\n",
+    "    fc2_b  = tf.Variable(tf.zeros(216))\n",
     "    fc2    = tf.matmul(fc1, fc2_W) + fc2_b\n",
     "    \n",
     "    # SOLUTION: Activation.\n",
-    "    fc2    = tf.nn.relu(fc2)\n",
+    "    fc2    = tf.nn.relu(fc2,name='activation4')\n",
     "\n",
-    "    # SOLUTION: Layer 5: Fully Connected. Input = 84. Output = n_classes here is 43.\n",
-    "    fc3_W  = tf.Variable(tf.truncated_normal(shape=(84, n_classes), mean = mu, stddev = sigma))\n",
+    "    # SOLUTION: Layer 5: Fully Connected. Input = 216. Output = n_classes here is 43.\n",
+    "    fc3_W  = tf.Variable(tf.truncated_normal(shape=(216, n_classes), mean = mu, stddev = sigma))\n",
     "    fc3_b  = tf.Variable(tf.zeros(n_classes))\n",
     "    logits = tf.matmul(fc2, fc3_W) + fc3_b\n",
     "    \n",
@@ -1796,7 +1806,7 @@
    "source": [
     "with tf.Session() as sess:    \n",
     "    saver.restore(sess, tf.train.latest_checkpoint('.'))\n",
-    "    act = sess.graph.get_tensor_by_name('Relu_4:0')\n",
+    "    act = sess.graph.get_tensor_by_name('activation1:0')\n",
     "    outputFeatureMap(X_predict, tf_activation=act, activation_min=-1, activation_max=-1 ,plt_num=1)\n",
     "    writer = tf.summary.FileWriter(\"tf_graph\", sess.graph)\n",
     "    writer.close()"
