proj2 for submitting

--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -1226,13 +1226,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![image.png](attachment:image.png)\n",
-    "Their predicted results from right to left are respectively:['Priority road' 'Speed limit (60km/h)' 'Speed limit (60km/h)'\n",
-    " 'Speed limit (50km/h)' 'Turn right ahead']\n",
-    "# Are the predictions right?\n",
-    "** To judge the effectiveness of predictions, firstly I must be clear what does the SignName look like in my training set. Hence, first of all, I show images of these sign names, that is 'Speed limit (60km/h)'(ClassId:3), 'Speed limit (50km/h)'(ClassId:2),'Turn right ahead'(ClassId:33) and 'Priority road'(ClassId:12).**\n",
-    "\n",
-    "From the showed images above, I would like to say that maybe only the first one ('Speed limit (60km/h)') is rightly predicted. So the accuracy is 0%."
+    "![image.png](attachment:image.png)"
    ]
   },
   {
@@ -1328,32 +1322,6 @@
     "#print(timestamp_train[idx])\n",
     "    ax = fig.add_subplot(1, 10, idx+1) # this line adds sub-axes\n",
     "    ax.imshow(show3[idx]) # this line creates the image using the pre-defined sub axes  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Analyze Performance"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "accuracy is 0.0%\n"
-     ]
-    }
-   ],
-   "source": [
-    "### Calculate the accuracy for these 5 new images. \n",
-    "### For example, if the model predicted 1 out of 5 signs correctly, it's 20% accurate on these new images.\n",
-    "print('accuracy is {}%'.format(0/5*100))"
    ]
   },
   {
@@ -1669,7 +1637,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.4"
   },
   "widgets": {
    "state": {},
